# agentic-demo-repo

./: .gitignore  README.md  agentgateway-rbac-response.md  enterprise-agentgateway-crds-2.1.1.tgz  kagent-and-agentgateway-deprecated.md  kagent-and-agentgateway-together.md  kagent-and-agentgateway.md  mcpprompt.md  moat-claude-config.json  test.ipynb  why-agentgateway.md
adk/: python-setup.md
adk/agentgateway-a2a-adk/: config.yaml  how-to.md  requirements.txt
adk/pyagenttest/: agent.py  requirements.txt
adk/troubleshoot-agent/: Dockerfile  how-it-works.md  pyproject.toml
adk/troubleshoot-agent/troubleshoot_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adk/troubleshoot-agent/troubleshootagent/: agent.py
adk/troubleshoot-agent/troubleshootagent/.adk/: session.db
agent-sandbox/: instructions.md  sandbox-moat-setup.md
agentevals/: demo.md
agentgateway-enterprise/: anthropicLLMConnection.md  llamaEnterprise.md  setup.md  traffic-through-agw-from-kagent.md
agentgateway-oss/: argocd-install.md  eks.yaml  everything.yaml  install-on-k8s.md
agentgateway-oss-k8s/: argocd-install.md  datadog-metrics-setup.md  install-on-k8s.md  k8s-oss-ui.md  semantic-routing-ex.md
agentgateway-oss-local/: agw-testing-without-playground
agentregistry/: build-and-deploy-agent.md  ide-to-agentgateway.md  k8s-helm-install.md  setup.md
agentregistry-enterprise/: access-policies.md  install-cli.md  setup-cli-entra-oidc.md  setup-entra.md
ai-specifications/: CLAUDE.md
eks-terraform/: variables.tf
ingress2gateway-testing/: auth  testing.md  tls.crt  tls.key
kagent-oss/: cli-ninja.md  how-to-follow-this-directory.md  install.md  kagent-pod-fix.md  mcp-connect-and-create-agent.md  setup.md  tracing.md
kmcp/: setup.md
llm-testing/: setup.md
mcp/: mcp-backend.md  mcp-inspector.md  mcp-multiplexing.md
mcp-oauth-demos/: README.md
mcp-server-starter/: README.md  pyproject.toml
mcp-server-starter/src/mcp_server_starter/: __init__.py  __main__.py  config.py  data.py  logging_config.py  server.py  services.py
mcp-server-starter/src/mcp_server_starter.egg-info/: PKG-INFO
mcp-server-starter/tests/: test_services.py
mcp/mcp-apps/: setup.md
multi-region-kagent-agw/: eks-east1-agent1setup.md  eks-east1-agent2setup.md  eks-east1-gatewaysetup.md  eks-west1-gatewaysetup.md  results-from-3192026.md  step-by-step-guide.md
openai-testing/: setup.md
openclaw/: vm-agw-config.md
sa-implementations/: setup-exp-1.md
security-agw-kagent/: security.md
substrate/: kagent-substrate-install.md  resume-an-actor.md  setup.md
vllm/: vllm-semantic-routing.md
(+448 files in other folders)
